<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mPOS</string>
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="pass_word">Password</string>
    <string name="hold_bill">Hold bill</string>
    <string name="report">Reports</string>
    <string name="utility">Utility</string>
    <string name="switch_user">Switch user</string>
    <string name="discount">Discount</string>
    <string name="cash">Cash</string>
    <string name="cancel_bill">Cancel bill</string>
    <string name="logout">Logout</string>
    <string name="sub_total">Sub total</string>
    <string name="vat">Vat</string>
    <string name="total_price">Total price</string>
    <string name="total_receive">Total receive</string>
    <string name="change">Change</string>
    <string name="price">Price</string>
    <string name="pay_type">Pay type</string>
    <string name="total_payment">Total pay</string>
    <string name="payment_left">Payment left</string>
    <string name="item_no">#</string>
    <string name="amount">Amount</string>
    <string name="credit_pay">Credit Card</string>
    <string name="credit_card_no">Credit card NO</string>
    <string name="bank">Bank</string>
    <string name="card_type">Card type</string>
    <string name="expire_date">Expire</string>
    <string name="enter">Enter</string>
    <string name="qty">Qty</string>
    <string name="sale_price">Sale price</string>
    <string name="vat_exclude">VAT exclude</string>
    <string name="confirm_cancel">Are you sure to cancel?</string>
    <string name="confirm_cancel_bill">Are you sure you want to cancel bill?</string>
    <string name="enter_enough_money">Please enter enough money.</string>
    <string name="close">Close</string>
    <string name="payment">Payment</string>
    <string name="sale_report">Sale report</string>
    <string name="sale_report_by_bill">Sale By Bill</string>
    <string name="sale_report_by_product">Sale By Product</string>
    <string name="remark">Remark</string>
    <string name="update_product_data">Update Product</string>
    <string name="update_product_progress">Update product data&#8230;</string>
    <string name="check_device_progress">Checking device please wait&#8230;</string>
    <string name="update_shop_progress">Update shop data&#8230;</string>
    <string name="update_menu_progress">Update menu data&#8230;</string>
    <string name="hold">Hold</string>
    <string name="create_report">Create report</string>
    <string name="code">Code</string>
    <string name="product_name">Product Name</string>
    <string name="unit_price">Unit Price</string>
    <string name="to">To</string>
    <string name="vatable">VATable</string>
    <string name="total_vat">Total VAT</string>
    <string name="connection">Connection</string>
    <string name="connection_summary">Setting server url.</string>
    <string name="incorrect_password">Incorrect password!</string>
    <string name="incorrect_user">Incorrect user!</string>
    <string name="enter_username">Please enter username</string>
    <string name="enter_password">Please enter password</string>
    <string name="update_data">Update Data</string>
    <string name="summary">Summary</string>
    <string name="receipt_no">Receipt No.</string>
    <string name="printer_ip">Printer IP</string>
    <string name="printer_name">Printer Name</string>
    <string name="printer_setting">Printer Settings</string>
    <string name="software_info">© 2013 All Rights Reserved. Synature Technology Co., Ltd.\n 
55/165 M.Banklangmuang, Soi Ladprao 88, Ladprao Rd.\n Wangthonglang, Bangkok, Thailand. 10310\n
Tel: +66(0)-2-530-3835-6 Fax: +66(0)-2-530-3092\n E-mail: info@synaturegroup.com</string>
    <string name="void_bill">Void Bill</string>
    <string name="endday">End Day</string>
    <string name="info_cat">Information</string>
    <string name="shop_info">Shop Info</string>
    <string name="close_shift">Close Shift</string>
    <string name="search">Search</string>
    <string name="paid_time">Paid Time</string>
    <string name="confirm_void_bill">Are you sure you want to void bill?</string>
    <string name="confirm">Confirm</string>
    <string name="setting">Setting</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete">Are you sure you want to delete selected</string>
    <string name="confirm_delete_item">Are you sure you want to delete this item?</string>
    <string name="enter_price">Please enter product price.</string>
    <string name="open_price">Open price</string>
    <string name="confirm_endday">Are you sure you want to endday?</string>
    <string name="confirm_close_shift">Are you sure you want to close shift?</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="device_not_register">Device not register</string>
    <string name="not_allow_discount_price">Not allow discount more than product price!</string>
    <string name="not_allow_discount">This product is not allow discount!</string>
    <string name="total">Total</string>
    <string name="percent">%</string>
    <string name="not_found_item">Not found item.</string>
    <string name="send_sale_data">Send sale data</string>
    <string name="update_data_success">Update data successfully.</string>
    <string name="printer_ip_summary">ip address of printer</string>
    <string name="about">About MPOS</string>
    <string name="endday_success">Endday successfully.</string>
    <string name="product_size">Product Size</string>
    <string name="enter_valid_numeric">Please enter valid numeric.</string>
    <string name="endday_progress">Ending day please wait&#8230;</string>
    <string name="alredy_endday">Already endday.</string>
    <string name="credit_card">Credit Card</string>
    <string name="before_vat">Before VAT</string>
    <string name="cannot_endday_have_order">Clear current order first!</string>
    <string name="barcode">Barcode</string>
    <string name="font">Font</string>
    <string name="device_code">Device Code</string>
    <string name="reprint_receipt">Reprint Receipt</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="print_test">Print test</string>
    <string name="print">Print</string>
    <string name="print_test_text">123xxstreet,xxxcity,xxxxstate\n******TEL**9999-99-9999****C#2\n***November.23,*2007***PM*4:24\napples******************$20.00\ngrapes******************$30.00\nbananas*****************$40.00\nlemons******************$50.00\noranges*****************$60.00\nTax*excluded.**********$200.00\nTax*****5.0%************$10.00\n______________________________\nTotal******************$210.00\n</string>
    <string name="not_found_printer">Not found printer!</string>
    <string name="cashier">Cashier</string>
    <string name="computer_setting_not_valid">Computer settings not valid!</string>
    <string name="send_all">Send All</string>
    <string name="internal_printer">Internal Printer</string>
    <string name="internal_printer_wintec">WINTEC Printer</string>
    <string name="spinner_please_select">Please select</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="please_select_card">Please select card type.</string>
    <string name="please_select_bank">Please select bank.</string>
    <string name="system_date">System Date</string>
    <string name="system_date_less">System date less than session date. Please check system date on your device.</string>
    <string name="date_time_setting">Date &amp; time Settings</string>
    <string name="system_date_more_than_session">System date more than session date. You must end previous sale date first.</string>
    <string name="not_found_bill">Not found bill.</string>
    <string name="void_bill_success">Void bill successfully.</string>
    <string name="please_select">Please select</string>
    <string name="void_receipt">Void Receipt</string>
    <string name="void_time">Void Time </string>
    <string name="void_by">Void By </string>
    <string name="shop">Shop</string>
    <string name="print_by">Print By</string>
    <string name="print_date">Print Date</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="total_receipt_in_day">Total Receipt In Day</string>
    <string name="void_bill_after_paid">Void Bill After Paid</string>
    <string name="grand_total">Grand Total</string>
    <string name="sale_by_product_report">Sale By Product Report</string>
    <string name="sale_by_bill_report">Sale By Bill Report</string>
    <string name="receipt">Receipt</string>
    <string name="time">Time</string>
    <string name="endday_report">End Day Report</string>
    <string name="cannot_update_data">Cannot update data.</string>
    <string name="cannot_connect_to_network">Cannot connect to network.</string>
    <string name="welcome_to">Welcome to</string>
    <string name="promise_system">pRoMiSe System</string>
    <string name="show_menu_image">Show menu image</string>
    <string name="general_setting">General Settings</string>
    <string name="menu_comment">Menu Comment</string>
    <string name="second_display_setting">Second Display Settings</string>
    <string name="second_display_setting_summary">Setting ipaddress, connection port of second display.</string>
    <string name="port">Port</string>
    <string name="enable_second_display">Enable Second Display</string>
    <string name="open_time">Open Time</string>
    <string name="staff">Staff</string>
    <string name="url">Url</string>
    <string name="sale_date">Sale Date</string>
    <string name="set_menu">Set Menu</string>
    <string name="send_sale_data_success">Send sale data successfully.</string>
    <string name="delete">Delete</string>
    <string name="reason">Reason</string>
    <string name="date">Date</string>
    <string name="items">Items</string>
    <string name="total_sale">Total Sale</string>
    <string name="hold_current_order">Please hold current order first.</string>
    <string name="select_item">Please selecte item first.</string>
    <string name="detail">Detail</string>
    <string name="ip_address">IP Address</string>
    <string name="apply">Apply</string>
    <string name="balance">Balance</string>
    <string name="card_no">Card No.</string>
    <string name="comment">Comment</string>
    <string name="clear">Clear</string>
    <string name="reset">Reset</string>
    <string name="send_endday_data">Send endday data</string>
    <string name="confirm_send_endday_now">Do you want to send endday data now?</string>
    <string name="send_endday_data_success">Send endday data successfully.</string>
    <string name="last_session">Last Session</string>
    <string name="current_sale_date">Current Sale Date</string>
    <string name="loading">Loading&#8230;</string>
    <string name="epson_printer">Epson Printer</string>
    <string name="baud_rate">Baud Rate</string>
    <string name="wintec_dev_path">Wintec device path</string>
    <string name="wintec_magnetic_reader_settings">Wintec Magnetic Reader Settings</string>
    <string name="wintec_cash_drawer_settings">Wintec Cash Drawer Settings</string>
    <string name="wintec_customer_display_settings">Wintec Customer Display Settings</string>
    <string name="enable_wintec_customer_display">Enable Wintec Customer Display</string>
    <string name="connection_time_out">Connection time out</string>
    <string name="exit">Exit</string>

</resources>