<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!--
         NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it.
    -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory 
        android:title="@string/connection" 
        android:summary="@string/connection_summary">
        <EditTextPreference 
        	android:key="server_url" 
        	android:title="@string/url" 
        	android:selectAllOnFocus="true"/>
        <ListPreference android:key="connection_time_out" android:title="@string/connection_time_out" android:defaultValue="30" android:entries="@array/connection_time_out_name" android:entryValues="@array/connection_time_out_value"/>
	</PreferenceCategory>

</PreferenceScreen>
