<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/wintec_magnetic_reader_settings" >
        <ListPreference
            android:defaultValue="/dev/ttySAC3"
            android:entries="@array/devices_path_name"
            android:entryValues="@array/devices_path_value"
            android:key="msr_wintec_dev_path"
            android:title="@string/wintec_dev_path" />
        <ListPreference
            android:defaultValue='BAUD_38400'
            android:entries="@array/baudrates_name"
            android:entryValues="@array/baudrates_value"
            android:key="msr_wintec_baud_rate"
            android:title="@string/baud_rate" />
    </PreferenceCategory>

</PreferenceScreen>