<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".VoidBillActivity" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/sale_date"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvSaleDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textAppearance="?android:attr/textAppearanceMediumInverse" />
        </LinearLayout>

        <LinearLayout
            style="@style/HeaderRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView8"
                style="@style/HeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/receipt_no"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvTo"
                style="@style/HeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/paid_time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <ListView
            android:id="@+id/lvBill"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_flat_bg"
            android:choiceMode="singleChoice"
            android:listSelector="@drawable/list_selector" >

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:gravity="right"
                    android:text="@string/receipt_no"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/txtReceiptNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:enabled="false"
                    android:textColor="@android:color/black" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:gravity="right"
                    android:text="@string/paid_time"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/txtSaleDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:enabled="false"
                    android:textColor="@android:color/black" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            style="@style/HeaderRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView4"
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/product_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView5"
                style="@style/HeaderText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/qty"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView6"
                style="@style/HeaderText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/price"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView7"
                style="@style/HeaderText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/total_price"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <ListView
            android:id="@+id/lvBillDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_flat_bg" >

        </ListView>
    </LinearLayout>

</LinearLayout>
